--- a/Minor_Project(Image_Classification).ipynb
+++ b/Minor_Project(Image_Classification).ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1yr85qPWwyfjt8lxH-SIC8woLSqFBfQp3",
-      "authorship_tag": "ABX9TyNyhk8t8s8L869uu9KQ18k7",
+      "authorship_tag": "ABX9TyPEq3FlUwjbFTd3N65eW0la",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -950,38 +950,27 @@
       "source": [
         "model=pickle.load(open('img_model.p','rb'))"
       ],
-      "execution_count": 55,
+      "execution_count": 62,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msdsRUvQAa00"
+        "id": "bKSnhcLfeXnG"
       },
       "source": [
-        " #Testing new image\n",
+        "#Testing new image\n",
         "flat_data =[]\n",
         "url = input('Enter your URL')\n",
         "img = imread(url)\n",
         "img_resized =resize(img,(150,150,3))\n",
         "flat_data.append(img_resized.flatten())\n",
-        "flat_data = np.array(flat_data)\n",
+        "flat_data=np.array(flat_data)\n",
         "print(img.shape)\n",
         "plt.imshow(img_resized)\n",
         "y_out = model.predict(flat_data)\n",
-        "y_out = CATEGORIES[y_out[0]]\n",
+        "y_out = categories[y_out[0]]\n",
         "print(f' PREDICTED OUTPUT: {y_out}')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "u11Hc7P3ZY9g"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
